fixed z-index

--- a/View/CSS/landingpage.css
+++ b/View/CSS/landingpage.css
@@ -18,6 +18,7 @@ header {
     padding: 50px 0;
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 
@@ -132,6 +133,8 @@ p {
     padding: 20px;
     transition: right 0.3s;
     /* Add smooth transition effect */
+    z-index: 1;
+
 
 }
 
